test/pass/enums_and_variants/variant_any_autobox.lly
enum class Option[A] {
	Some(A),
	None
}

var a: any = Some(10)

if a != Some(10):
	stderr.write("Failed!\n")
