test/fail/enums_and_variants/variant_decl.lly
#[
SyntaxError: Variant types not allowed in a declaration.
    from variant_decl.lly:11
]#

enum Option[A] {
	Some(A)
	None
}

var v: Some[integer] = Some(10)
